test/simple/ill-typed/dep_sum.caprice
(* TEST
  include refutable;
*)


let rec sum x acc = 
  match x with
  | [] -> acc
  | hd :: tl -> sum tl (acc + hd)
  end

let f (dependent x : list int) : { a : int | a == sum x 0 } =
  sum x 1 (* ERROR: acc begins as 1 here when should be 0 *)
